<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.practicals.chris.prac_3_quicksum.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="Result"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/number_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0"
            android:columnCount="3"
            android:gravity="center"
            android:rowCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/b7"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="27dp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/b8"
                app:layout_constraintEnd_toStartOf="@+id/btn_9"
                app:layout_constraintStart_toEndOf="@+id/btn_7"
                tools:layout_editor_absoluteY="27dp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/b9"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="27dp" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/b4"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="75dp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/b5"
                app:layout_constraintEnd_toStartOf="@+id/btn_6"
                app:layout_constraintStart_toEndOf="@+id/btn_4"
                tools:layout_editor_absoluteY="75dp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/b6"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="75dp" />

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/b1"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="123dp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/b2"
                app:layout_constraintEnd_toStartOf="@+id/btn_3"
                app:layout_constraintStart_toEndOf="@+id/btn_1"
                tools:layout_editor_absoluteY="123dp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/b3"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="123dp" />
        </GridLayout>

        <Button
            android:id="@+id/btn_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other" />

        <Button
            android:id="@+id/btn_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
